--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,11 +8,11 @@
     <!-- META THEME-COLOR -->
     <meta name="theme-color" content="#000000" />
     <!-- META TITLE -->
-    <title>Revise | Exam Bank System.</title>
+    <title>Revise | Exam Bank.</title>
     <!-- META DESCRIPTION -->
     <meta
       name="description"
-      content="Welcome to Revise Exam Bank System. Your Trusted Hub for past exam papers."
+      content="Welcome to Revise Exam Bank. Your Trusted Hub for past exam papers."
     />
     <!-- META LOGIN -->
     <meta
@@ -41,10 +41,10 @@
     <meta name="email" content="exams.revise@gmail.com" />
     <meta name="contact" content="Revise Support" />
     <!-- OPEN GRAPH META TAGS FOR LINK PREVIEW -->
-    <meta property="og:title" content="Revise | Exam Bank System." />
+    <meta property="og:title" content="Revise | Exam Bank." />
     <meta
       property="og:description"
-      content="Welcome to Revise Exam Bank System. Your Trusted Hub for past exam papers."
+      content="Welcome to Revise Exam Bank. Your Trusted Hub for past exam papers."
     />
     <meta property="og:image" content="https://revise.com/revise.png" />
     <meta property="og:url" content="https://revise.com" />
