--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,71 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- META CHARSET -->
+    <!-- Charset -->
     <meta charset="utf-8" />
-    <!-- META VIEWPORT -->
+
+    <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- META FAVICON -->
+
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/manifest.json" />
-    <!-- META THEME-COLOR -->
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+
+    <!-- Theme Color -->
     <meta name="theme-color" content="#000000" />
-    <!-- META TITLE -->
-    <title>Revise | Exam Bank.</title>
-    <!-- META DESCRIPTION -->
+
+    <!-- Title and Description -->
+    <title>Revise | Exam Bank</title>
     <meta
       name="description"
-      content="Welcome to Revise Exam Bank. Your Trusted Hub for past exam papers."
+      content="Welcome to Revise Exam Bank — Your Trusted Hub for past exam papers."
     />
-    <!-- META LOGIN -->
-    <meta
-      name="login"
-      content="Revise: Login to manage your past exam papers."
-    />
-    <meta property="og:title" content="Revise | Login" />
-    <meta
-      property="og:description"
-      content="Log in to your Revise account to manage your past exam papers."
-    />
-    <meta property="og:url" content="https://revise.com/login" />
-    <!-- META SIGNUP -->
-    <meta
-      name="signup"
-      content="Revise: Create an account to manage past exam papers."
-    />
-    <meta property="og:title" content="Revise | Signup" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://revise.co.ke/" />
+
+    <!-- Open Graph (Social Sharing) -->
+    <meta property="og:title" content="Revise | Exam Bank" />
     <meta
       property="og:description"
-      content="Join Revise today! Sign up to manage your past exam papers."
+      content="Welcome to Revise Exam Bank — Your Trusted Hub for past exam papers."
     />
-    <meta property="og:url" content="https://revise.com/signup" />
-    <!-- CONTACT -->
+    <meta property="og:image" content="https://revise.co.ke/revise.png" />
+    <meta property="og:url" content="https://revise.co.ke/" />
+    <meta property="og:type" content="website" />
+
+    <!-- SEO -->
+    <meta
+      name="keywords"
+      content="revise, exam bank, past papers, exam papers, revise exam bank, past exam papers"
+    />
+    <meta name="author" content="Sir. Mukembi" />
+
+    <!-- Contact Info -->
     <meta name="telephone" content="+254725540469" />
     <meta name="email" content="exams.revise@gmail.com" />
     <meta name="contact" content="Revise Support" />
-    <!-- OPEN GRAPH META TAGS FOR LINK PREVIEW -->
-    <meta property="og:title" content="Revise | Exam Bank." />
-    <meta
-      property="og:description"
-      content="Welcome to Revise Exam Bank. Your Trusted Hub for past exam papers."
-    />
-    <meta property="og:image" content="https://revise.com/revise.png" />
-    <meta property="og:url" content="https://revise.com" />
-    <meta property="og:type" content="website" />
-    <!-- META KEYWORDS -->
-    <meta
-      name="keywords"
-      content="revise, exam bank, revise exam bank, revise exam bank system, exam bank system, past papers, past exam papers, papers, exams, exam, exam papers"
-    />
-    <!-- META AUTHOR -->
-    <meta name="author" content="Sir. Mukembi" />
-    <!-- META FAVICON -->
-    <link rel="shortcut icon" type="image/ico" href="./favicon.ico" />
+
+    <!-- Preconnects for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
